lint: add eslint and prettier

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,16 +1,18 @@
 * {
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
 }
-  body {
-    background: #F0F2F5 ;
-    -webkit-font-smoothing: antialiased
-  }
-  body, input, button {
-    font: 16px "Poppins", sans-serif;
-  }
-  button {
-    cursor: pointer;
-  }
+body {
+  background: #f0f2f5;
+  -webkit-font-smoothing: antialiased;
+}
+body,
+input,
+button {
+  font: 16px 'Poppins', sans-serif;
+}
+button {
+  cursor: pointer;
+}
