--- a/src/components/BikeCard/BikeCard.styles.css
+++ b/src/components/BikeCard/BikeCard.styles.css
@@ -1,10 +1,12 @@
 .card-container {
-    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
     border: 1px solid black;
     border-radius: 30px;
 }
 
 .bike-image {
-    width: 400px;
+    /* width: 400px; */
     height: 200px;
 }
