--- a/src/components/Header/Header.styles.css
+++ b/src/components/Header/Header.styles.css
@@ -1,7 +1,7 @@
 .header-container {
     display: flex;
     flex: 1;
-    width: 100vw;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
 }
@@ -23,5 +23,5 @@ a {
     background-color: orange;
     padding: 14px 26px;
     color: white;
-    margin: 0 30px;
+    margin-left: 30px;
 }
