--- a/src/components/BikeCard/BikeCard.styles.css
+++ b/src/components/BikeCard/BikeCard.styles.css
@@ -2,11 +2,50 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    border: 1px solid black;
+    border: 1px solid #EDEDED;
     border-radius: 30px;
 }
 
+.card-container:hover {
+    cursor: pointer;
+    box-shadow:
+        0.6px 0.6px 2.2px rgba(0, 0, 0, 0.02),
+        1.3px 1.3px 5.3px rgba(0, 0, 0, 0.028),
+        2.5px 2.5px 10px rgba(0, 0, 0, 0.035),
+        4.5px 4.5px 17.9px rgba(0, 0, 0, 0.042),
+        8.4px 8.4px 33.4px rgba(0, 0, 0, 0.05),
+        20px 20px 80px rgba(0, 0, 0, 0.07)
+    ;
+}
+
 .bike-image {
-    /* width: 400px; */
-    height: 200px;
+    width: 100%;
+    height: auto;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+}
+
+.card-infos-container {
+    padding: 18px;
+}
+
+.card-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.card-description {
+    margin: 14px 0;
+}
+
+.card-prices-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 5px;
+}
+
+.card-prices-container > strong {
+    margin-bottom: 5px;
 }
