--- a/src/components/BikeList/BikeList.styles.css
+++ b/src/components/BikeList/BikeList.styles.css
@@ -1,7 +1,6 @@
 .list-container {
     width: 100%;
     margin-top: 45px;
-    /* background-color: red; */
 }
 
 .list-quantity-container {
@@ -19,4 +18,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 25px;
+}
+
+@media (max-width: 767px) {
+    .list-bikes-container {
+        grid-template-columns: 1fr ;
+    }
 }
