--- a/src/components/BikeImageList/components/ImageToSelect/ImageToSelect.styles.css
+++ b/src/components/BikeImageList/components/ImageToSelect/ImageToSelect.styles.css
@@ -13,3 +13,12 @@
 .selected {
     border: 1px solid #1F49D1;
 }
+
+@media (max-width: 767px) {
+    .image-to-select {
+        width: 50px;
+        height: 50px;
+        border-radius: 16px;
+        margin-bottom: 0;
+    }
+}
