--- a/src/components/BikeImageSelector/BikeImageSelector.styles.css
+++ b/src/components/BikeImageSelector/BikeImageSelector.styles.css
@@ -9,3 +9,10 @@
     width: 100%;
     height: 100%;
 }
+
+@media (max-width: 767px) {
+    .bike-image-selector-container {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+}
