--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,9 @@
   outline: 0;
   box-sizing: border-box;
 }
+a {
+  text-decoration: none;
+}
 body {
   background: #fff;
   -webkit-font-smoothing: antialiased;
