--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,43 +1,50 @@
 @font-face {
-  font-family: 'Mont';
+  font-family: "Mont"; 
   font-weight: 200;
-  src: local('Mont'), url('../assets/fonts/Mont-ExtraLight.otf') format('opentype');
+  src: local("Mont"),
+    url("../assets/fonts/Mont-ExtraLight.otf") format("opentype");
 }
 
 @font-face {
-  font-family: 'Mont';
+  font-family: "Mont"; 
   font-weight: 300;
-  src: local('Mont'), url('../assets/fonts/Mont-Light.otf') format('opentype');
+  src: local("Mont"),
+    url("../assets/fonts/Mont-Light.otf") format("opentype");
 }
 
 @font-face {
-  font-family: 'Mont';
+  font-family: "Mont"; 
   font-weight: 400;
-  src: local('Mont'), url('../assets/fonts/Mont-Regular.otf') format('opentype');
+  src: local("Mont"),
+    url("../assets/fonts/Mont-Regular.otf") format("opentype");
 }
 
 @font-face {
-  font-family: 'Mont';
+  font-family: "Mont"; 
   font-weight: 500;
-  src: local('Mont'), url('../assets/fonts/Mont-Book.otf') format('opentype');
+  src: local("Mont"),
+    url("../assets/fonts/Mont-Book.otf") format("opentype");
 }
 
 @font-face {
-  font-family: 'Mont';
+  font-family: "Mont"; 
   font-weight: 600;
-  src: local('Mont'), url('../assets/fonts/Mont-SemiBold.otf') format('opentype');
+  src: local("Mont"),
+    url("../assets/fonts/Mont-SemiBold.otf") format("opentype");
 }
 
 @font-face {
-  font-family: 'Mont';
+  font-family: "Mont"; 
   font-weight: 700;
-  src: local('Mont'), url('../assets/fonts/Mont-Bold.otf') format('opentype');
+  src: local("Mont"),
+    url("../assets/fonts/Mont-Bold.otf") format("opentype");
 }
 
 @font-face {
-  font-family: 'Mont';
+  font-family: "Mont"; 
   font-weight: 800;
-  src: local('Mont'), url('../assets/fonts/Mont-Heavy.otf') format('opentype');
+  src: local("Mont"),
+    url("../assets/fonts/Mont-Heavy.otf") format("opentype");
 }
 
 * {
